--- a/Lab01/aboutme.html
+++ b/Lab01/aboutme.html
@@ -12,16 +12,14 @@
         <section>
             <h2>About Me</h2>
             <p>
-                Replace this content with info about you! Share as little or as much as you want about yourself. 
-                This page will be public, so keep that in mind. Do not share anything you aren't comfortable sharing publushing. 
-                You no not need to include your name or any personal identifiable infomration. 
+                My name is Hamd, and I am studying at CCBC. 
             </p>
         </section>
         <section>
             <h2>Education</h2>
             <p>
                 
-             Put information here about what you are studing. 
+             I am studying Information Technology at CCBC. 
                 
                 </p>
         </section>
@@ -29,7 +27,7 @@
             <h2>Skills/Hobbies</h2>
             <p>
 
-                Write about any skills or hobbies you have here. 
+                Some of my hobbies are eating good food, hanging out with my sisters, and going to the gym. 
 
             </p>
         </section>
