--- a/Lab02/index.html
+++ b/Lab02/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lab 02: Assignment</title>
+</head>
+<body>
 
+    <header>
+        <h1>Learning Web Standards</h1>
+    </header>
+
+    <main>
+        <article>
+            <h2>Labs 01 & 02</h2>
+            <p>Published September 15, 2024</p>
+            <p>In Lab 1, I learned the difference between local and remote files, practiced file management in VS Code, and published my first web page. In Lab 2, I explored HTML basics, learned how to structure text with tags, and validated my HTML files using an online tool to ensure correctness.</p>
+            
+            <h3>What I Learned</h3>
+            <ol>
+                <li>Understanding the importance of file structure and management in web development.</li>
+                <li>Learning the proper use of HTML elements and tags for structuring a web page.</li>
+                <li>How to validate an HTML file to ensure it meets web standards.</li>
+            </ol>
+
+            <h3>Additional Insights</h3>
+            <p>I also learned about validating HTML files using the W3C Validator, which made me more comfortable because it lets me know that my HTML documents were error-free and compliant with web standards.</p>
+            <a href="https://validator.w3.org/#validate_by_upload" target="_blank">Check out the W3C Validator for HTML file validation</a>
+        </article>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Hamd Khokhar - All Rights Reserved</p>
+    </footer>
+
+</body>
+</html>
